# xetead-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/battle/: admin_utils.py  exceptions.py  logger.py  main.py
app/battle/core/: battlefield_context.py  buff_container.py  command_calculator.py  command_expanders.py  command_process_helpers.py  command_processors.py  round_manager.py
app/battle/core/commands/: admin.py  define.py  models.py  parser.py
app/battle/objects/: define.py  extensions.py  models.py
app/battle/objects/buff/: buff_base.py  buff_events.py  conditions.py  define.py  models.py
app/battle/objects/buff/buffs/: __init__.py  _buff_no_data_base.py  buff_atk.py  (+9 more)
app/battle/objects/character/: buffed_stats.py  combat_character.py  combat_stats.py
app/battle/objects/skill/: define.py  models.py  target_functions.py
app/battle/practice/: context.py  define.py  round_manager.py
app/battle/visualization/: __init__.py  renderer.py  template.html
app/bots/: events.py
app/bots/discord_bot/: consts.py  load_data.py  main.py  parse_helpers.py  session.py
app/bots/mastodon_bot/: battle_persistence.py  load_data.py  main.py  session.py
app/bots/mastodon_bot/commands/: admin.py  character.py
app/spreadsheets/models/: battle.py
app/story/: character.py
app/utils/: battle_helpers.py  dice.py  logging.py
test/: battle_test.py  battlefield_test.py  conftest.py  helpers.py  parser_test.py  skill_effect_test.py  test_battlefield.py  test_buffs.py  test_parser.py  test_skill_effects.py
test/buff_test/: buff_atk_test.py
(+5 files in other folders)
